<resources>
    <string name="app_name">PayTracker</string>

    <string name="welcome">Welcome!</string>
    <string name="get_started">Get Started</string>
    <string name="phoneNumber">Phone number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next_step">Continue</string>
    <string name="action_settings">Settings</string>
    <string name="action_buddies">Buddies</string>
    <string name="action_save">Save</string>
    <string name="action_add">Add</string>
    <string name="action_reload">Refresh</string>
    <string name="action_view_expenses">View Expenses</string>
    <string name="action_view_outstandings">View Outstandings</string>
    <string name="action_share_outing">Share</string>
    <string name="title_activity_buddies">Buddies</string>
    <string name="title_activity_outing_details">OutingDetails</string>
    <string name="title_activity_new_expense">NewExpense</string>
    <string name="title_activity_outstandings">Outstandings</string>
    <string name="tool_bar_buddies">Buddies</string>
    <string name="tool_bar_summary">Summary</string>


    <string name="label_title">Title</string>
    <string name="label_desc">Description</string>
    <string name="label_email">Email</string>
    <string name="label_name">Name</string>
    <string name="label_nickname">Nickname</string>
    <string name="label_next">Next</string>
    <string name="label_save">Save</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_edit">Edit</string>
    <string name="label_delete">Delete</string>
    <string name="label_share">Share</string>
    <string name="dialog_title_new_buddy">New Friend</string>
    <string name="dialog_title_select_buddy">Select Friends</string>
    <string name="dialog_title_new_outing">New Outing</string>
    <string name="dialog_title_select_number">Select Number</string>
    <string name="label_expense_by">By :</string>
    <string name="label_expense_for">For :</string>
    <string name="label_expense_Comments">Comments :</string>
    <string name="label_expense_amount">Amount :</string>
    <string name="dialog_confirm_delete_expense">Are you sure you want to delete this expense?</string>
    <string name="dialog_confirm_delete_yes">Yes</string>
    <string name="dialog_confirm_delete_no">No</string>

    <string name="alert_invalid_phone_number">Please enter a valid phone number.</string>
    <string name="alert_invalid_email">Please enter a valid email.</string>
    <string name="alert_failed_task">Operation failed...!</string>
    <string name="alert_passwords_empty">Please enter the password.</string>
    <string name="alert_passwords_different">The passwords do not match.</string>
    <string name="alert_name_empty">Please enter name.</string>
    <string name="alert_no_more_buddies">All friends are already added.</string>
    <string name="alert_incorrect_amount">Please input a proper amount.</string>
    <string name="alert_select_people">Please select at least one person for the expense.</string>
    <string name="alert_select_people_share">Please select person to share.</string>
    <string name="alert_shared_success">Outing shared successfully.</string>

    <string name="placeholder_no_outstandings">No outstandings!</string>
    <string name="title_activity_launch">PayTracker</string>
    <string name="title_activity_input_email">InputEmailActivity</string>
    <string name="title_activity_account_setup">AccountSetupActivity</string>

    <string name="placeholder_no_expenses">No expenses!</string>
    <string name="title_activity_expense_list">ExpenseListActivity</string>
    <string name="label_expense_person_cost">Cost</string>
    <string name="label_expense_person_spent">Spent</string>
    <string name="title_activity_add_buddy">Add Buddy</string>
    <string name="placeholder_search_contacts">Search contacts</string>

</resources>
