<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_background_color"
    tools:context="com.creativecapsule.paytracker.UI.Activities.ExpenseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_item_title_size"
            android:text="@string/label_expense_by"
            android:textColor="@color/text_color_dark"/>
        <Spinner
            android:id="@+id/expense_by_spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width"
        android:background="@color/divider_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textSize="@dimen/list_item_title_size"
            android:text="@string/label_expense_amount"
            android:textColor="@color/text_color_dark"/>
        <EditText
            android:id="@+id/expense_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:gravity="center_horizontal"
            android:textColor="@color/text_color_dark"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width"
        android:background="@color/divider_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_item_title_size"
            android:text="@string/label_expense_Comments"
            android:textColor="@color/text_color_dark"/>
        <EditText
            android:id="@+id/expense_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:gravity="center_horizontal"
            android:textColor="@color/text_color_dark"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_width"
        android:background="@color/divider_line_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/list_item_title_size"
            android:text="@string/label_expense_for"
            android:textColor="@color/text_color_dark"/>
        <ListView
            android:id="@+id/expense_for_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_expense_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/global_margin_5"
            android:text="@string/label_save"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/button_bg_color"
            android:textColor="@color/button_text_color"/>
        <Button
            android:id="@+id/btn_expense_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/global_margin_5"
            android:text="@string/label_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/button_bg_color"
            android:textColor="@color/button_text_color"/>
    </LinearLayout>

</LinearLayout>
